--- a/index.html
+++ b/index.html
@@ -25,10 +25,52 @@
           --color-devider: rgba(255, 255, 255, 0.1);
         }
       }
+      /* Regular (400 normal) */
+      @font-face {
+        font-family: "GoogleSans";
+        src: url("assets/fonts/GoogleSans-Regular.ttf") format("truetype");
+        font-weight: 400;
+        font-style: normal;
+      }
+      /* Italic (400 italic) */
+      @font-face {
+        font-family: "GoogleSans";
+        src: url("assets/fonts/GoogleSans-Italic.ttf") format("truetype");
+        font-weight: 400;
+        font-style: italic;
+      }
+      /* Medium (500 normal) */
+      @font-face {
+        font-family: "GoogleSans";
+        src: url("assets/fonts/GoogleSans-Medium.ttf") format("truetype");
+        font-weight: 500;
+        font-style: normal;
+      }
+      /* Medium Italic (500 italic) */
+      @font-face {
+        font-family: "GoogleSans";
+        src: url("assets/fonts/GoogleSans-MediumItalic.ttf") format("truetype");
+        font-weight: 500;
+        font-style: italic;
+      }
+      /* Bold (700 normal) */
+      @font-face {
+        font-family: "GoogleSans";
+        src: url("assets/fonts/GoogleSans-Bold.ttf") format("truetype");
+        font-weight: 700;
+        font-style: normal;
+      }
+      /* Bold Italic (700 italic) */
+      @font-face {
+        font-family: "GoogleSans";
+        src: url("assets/fonts/GoogleSans-BoldItalic.ttf") format("truetype");
+        font-weight: 700;
+        font-style: italic;
+      }
       body {
         margin: 0;
         padding: 0;
-        font-family: Sans-Serif;
+        font-family: GoogleSans;
         background-color: var(--color-background);
       }
       .scrollable.no-scroll {
