--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@
               <div class="container">
                 <div class="fragment">
                   <div style="padding: 10px 28px">
-                    <h2>Tab 1</h2>
+                    <h2>Tab One</h2>
                   </div>
                 </div>
                 <div class="fragment">
                   <div style="padding: 10px 28px">
-                    <h2>Tab 2</h2>
+                    <h2>Tab Two</h2>
                   </div>
                 </div>
               </div>
