--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         background-color: var(--color-background);
         position: sticky;
         top: 0;
+        user-select: none;
         z-index: 1;
       }
       .home > .header .nav {
