--- a/admin/index.html
+++ b/admin/index.html
@@ -87,36 +87,13 @@
         flex-direction: column;
         justify-content: space-between;
       }
-      .app > .side .header {
-        width: 100%;
-      }
       .app > .side .nav {
         width: 100%;
         flex: 1;
-        padding: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
         box-sizing: border-box;
         overflow-x: hidden;
-      }
-      .app > .side .nav .hamburg {
-        width: 40px;
-        height: 40px;
-        padding: 8px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        z-index: 2;
-      }
-      .app > .side .nav .hamburg span {
-        width: 100%;
-        height: 2px;
-        border-radius: 100px;
-        background-color: var(--color-on-background);
-        transition: all 0.1s ease;
-      }
-      .app > .side .nav .hamburg span:nth-child(2) {
-        width: 12px;
-        margin-top: 5px;
       }
       .app > .side .nav-item {
         width: 100%;
@@ -152,7 +129,7 @@
         width: 32px;
         height: 32px;
         border-radius: 100px;
-        background-color: var(--color-background);
+        background-color:;
         overflow: hidden;
       }
       .app > .side .nav-item.active .nav-icon.profile {
@@ -166,7 +143,7 @@
       }
       .app > .main {
         width: 100%;
-        padding-left: 60px;
+        padding-left: 65px;
         box-sizing: border-box;
       }
       .app > .main > .container {
@@ -178,22 +155,11 @@
       .app > .main > .container > .fragment.active {
         display: block;
       }
-      .dashboard {
-        width: 100%;
-      }
     </style>
   </head>
   <body>
     <div class="app">
       <div class="side">
-        <div class="header">
-          <div class="nav">
-            <div class="hamburg">
-              <span></span>
-              <span></span>
-            </div>
-          </div>
-        </div>
         <div class="nav">
           <div class="nav-item">
             <div class="nav-icon">
@@ -222,7 +188,9 @@
       </div>
       <div class="main">
         <div class="container">
-          <div class="fragment dashboard"></div>
+          <div class="fragment">
+            <span>Dashboard</span>
+          </div>
           <div class="fragment">
             <span>Profile</span>
           </div>
